cluster/archive/networking/minio-proxy/minio-proxy.endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio-proxy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: minio-proxy
    kubernetes.io/service-name: minio-proxy
addressType: IPv4
ports:
  - name: http
    port: 9000
    protocol: TCP
endpoints:
  - addresses:
      - ${SECRET_MINIO_IP}
    conditions:
      ready: true

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minio-proxy-ui
  namespace: monitoring
  labels:
    app.kubernetes.io/name: minio-proxy-ui
    kubernetes.io/service-name: minio-proxy-ui
addressType: IPv4
ports:
  - name: http
    port: 9001
    protocol: TCP
endpoints:
  - addresses:
      - ${SECRET_MINIO_IP}
    conditions:
      ready: true
