cluster/archive/networking/minio-proxy/minio-proxy.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio-proxy
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: *app
---
apiVersion: v1
kind: Service
metadata:
  name: &appui minio-proxy-ui
  namespace: monitoring
  labels:
    app.kubernetes.io/name: &appui
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app.kubernetes.io/name: &appui
