cluster/archive/networking/minio-proxy/minio-proxy.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-proxy
  namespace: monitoring
  labels:
    app.kubernetes.io/name: minio-proxy
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "minio.${SECRET_PUBLIC_DOMAIN}"
  rules:
    - host: "minio.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-proxy
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-proxy-ui
  namespace: monitoring
  labels:
    app.kubernetes.io/name: minio-proxy-ui
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "minio-ui.${SECRET_PUBLIC_DOMAIN}"
  rules:
    - host: "minio-ui.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-proxy-ui
                port:
                  name: http
